bpo-42323: Fix math.nextafter() for NaN on AIX (GH-24265)